@@ -1,3 +1,8 @@
+2009-12-13  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/uimisc.[ch]:
+	(-flush_ui_events) Remove unused function
+
 2009-12-11  Alberto Garcia  <agarcia@igalia.com>
 
 	* debian/control.maemo[2345]:
